--- a/src/Global/Header/Header.css
+++ b/src/Global/Header/Header.css
@@ -1,6 +1,6 @@
 .Header {
   text-align: center;
-  background-color: #069AFB;
+  background-color: #2EC0C0;
   height: 100px;
   padding: 20px;
   color: white;
